--- a/wig/cgi/wall.html
+++ b/wig/cgi/wall.html
@@ -5,7 +5,7 @@
 <h1> <q>If you can express your soul, the rest ceases to matter. </q></h1>
 <br/>
 <h3>
-<img src="arnold.jpg" alt="Smiley face" height="200" width="200">
+<img src="http://www.cs.mcgill.ca/~fkhan24/arnold.jpg" alt="Smiley face" height="200" width="200">
 <br/>COME AT ME BRO, ARGH!<br/>
 
 <form name="getmsg" action="http://www.cs.mcgill.ca/~fkhan24/cgi-bin/wall.py" method="POST">
